[package]
name = "rusty_rpi_powerbutt"
version = "0.1.0"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]


[dependencies]
runas = "0.1.4"
pigrust = "0.1.0"
rpi3_firmware_access = "0.1.0"

[patch.crates-io]
rpi3_firmware_access = { git = "https://github.com/tstellanova/rpi3_firmware_access" }
pigrust = { git = "https://github.com/tstellanova/pigrust" }

